# ETHUSD_system

./: .gitignore  pyproject.toml
configs/: risk.yaml  trading.yaml
configs/strategies/: bb_squeeze.yaml
src/: __main__.py
src/config/: loader.py
src/core/: exceptions.py  types.py
src/data/: __init__.py  base.py
src/data/providers/: __init__.py  twelvedata.py
src/domain/: market_data.py  position_manager.py  position_sizer.py  risk_manager.py  trade_converter.py  trading.py
src/engine/: backtest.py  core_engine.py  forward.py  trading_config.py
src/engine/components/: data_handler.py  entry_handler.py  exit_handler.py  marketstate_builder.py  position_manager.py  risk_manager.py  trade_converter.py  trading_config.py  warmup.py
src/execution/: converter.py  mt5_bridge.py  position_manager.py  position_sizer.py
src/execution/mt5_package/: __init__.py  mt5_connection.py  mt5_market_data.py  mt5_order_executor.py  mt5_position_repository.py
src/indicators/: base.py  volatility.py
src/indicators/incremental/: volatility_live.py
src/indicators/legacy/: volatility.py
src/infrastructure/logger/: data_logger.py  logger.py
src/infrastructure/notifier/: line_notifier.py
src/infrastructure/state/: position_storage.py
src/risk/: sizing.py
src/strategies/: base.py  registry.py  strategy_loader.py
src/strategies/bb_squeeze/: __init__.py  config.py  signal.py
src/utils/: data_logger.py  line_notifier.py  logger.py  state_manager.py  trade_utils.py
tests/: test_twelvedata.py
